--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
   --fontep: "Roboto", sans-serif;
 }
 body {
-  min-height: 100vh;
+  max-height: 100%;
   background-color: darkgrey;
   background-image: url(imagens/Bandeira_do_Pará.png);
   background-attachment: fixed;
@@ -47,8 +47,8 @@ a:hover {
 }
 main {
   margin: auto;
-  min-width: 300px;
-  max-width: 1000px;
+  min-width: 280px;
+  max-width: 800px;
   background-color: white;
 }
 main img {
@@ -86,4 +86,6 @@ h2#bosque {
 .img {
   float: left;
   padding: 10px;
+}
+#mercado {
 }
