--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@ body {
   background-position: center center;
   background-size: cover;
   min-width: 100px;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
 }
 header {
   font-family: var(--fonteh1);
@@ -56,7 +60,6 @@ main {
 main img {
   display: block;
   max-width: 350px;
-  
 }
 h2 {
   margin-bottom: 20px;
