--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 header {
   font-family: var(--fonteh1);
   text-align: center;
-  min-height: 150px;
+  min-height: 100%;
 }
 h1 {
   padding: 30px;
@@ -92,5 +92,4 @@ h2#bosque {
   float: left;
   padding: 10px;
 }
-#mercado {
-}
+
