--- a/style.css
+++ b/style.css
@@ -11,16 +11,12 @@
   --fontep: "Roboto", sans-serif;
 }
 body {
-  background-color: darkgrey;
-  background-image: url(imagens/Bandeira_do_Pará.png);
+  background-color: red;
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
-  margin: 0;
-  padding: 0;
   width: 100%;
-  height: 100%;
 }
 header {
   font-family: var(--fonteh1);
@@ -54,6 +50,7 @@ main {
   min-width: 250px;
   max-width: 800px;
   background-color: white;
+  padding: 20px;
 }
 main img {
   display: block;
