--- a/style.css
+++ b/style.css
@@ -12,20 +12,15 @@
 }
 body {
   background-color: red;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  width: 100%;
 }
 header {
   font-family: var(--fonteh1);
   text-align: center;
-  min-height: 100%;
 }
 h1 {
   padding: 30px;
   font-size: 3em;
+  font-family: var(--fonteh1);
 }
 h1 > a {
   text-decoration: none;
@@ -51,21 +46,16 @@ main {
   max-width: 800px;
   background-color: white;
   padding: 20px;
-}
-main img {
-  display: block;
-  max-width: 350px;
+  line-height: 1.2em;
 }
 h2 {
   margin-bottom: 20px;
-  display: block;
   margin-left: 20px;
   text-align: center;
   background-color: darkgrey;
 }
 section {
-  display: inline-block;
-  font-family: var(--fonteh1);
+  font-family: var(--fontep);
 }
 section > p {
   font-family: var(--fontep);
@@ -86,7 +76,8 @@ h2#bosque {
   margin-top: 30px;
 }
 .img {
-  float: left;
-  padding: 10px;
+  padding: 15px;
+  display: block;
+  margin: auto;
 }
 
