--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ nav > a {
 }
 a:hover {
   text-decoration: underline;
+  background-color: grey;
 }
 main {
   margin: auto;
@@ -53,6 +54,7 @@ h2 {
   margin-left: 20px;
   text-align: center;
   background-color: darkgrey;
+  padding: 15px;
 }
 section {
   font-family: var(--fontep);
