--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ header {
   text-align: center;
 }
 header > h1 {
-  padding-top: 50px;
+  padding-top: 30px;
   font-variant: small-caps;
 }
 h1 {
@@ -35,6 +35,7 @@ nav {
   box-shadow: 1px 1px 0px rgba(0, 0, 0, 0.425);
   margin-bottom: 10px;
   background-color: rgba(128, 128, 128, 0.733);
+  margin: px;
 }
 nav > a {
   margin-left: 40px;
@@ -52,11 +53,12 @@ main {
   line-height: 1.2em;
 }
 h2 {
-  margin-bottom: 15px;
-  margin-left: 15px;
+  margin-bottom: 10px;
+  margin-left: 10px;
   text-align: center;
   background-color: darkgrey;
   padding: 15px;
+  
 }
 section {
   font-family: var(--fontep);
