--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ h2#bosque {
   padding: 10px;
   display: block;
   margin: auto;
-  height: 300px;
+  width: 300px;
 }
 #fotoh1 {
   width: 200px;
