--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ h1 > a {
 nav {
   padding: 10px;
   box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.425);
-  margin-bottom: 0px;
+  margin-bottom: 10px;
   background-color: #ff000079;
   border-bottom: 2px solid rgba(0, 0, 0, 0.493)
   ;
@@ -52,20 +52,24 @@ main {
   margin: auto;
   max-width: 100vh;
   background-color: white;
+  padding: 20px;
   line-height: 1.2em;
   border-radius: 2px 2px 2px;
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.438);
 }
 h2 {
   margin-bottom: 10px;
+  margin-left: 10px;
   text-align: center;
   background-color: #ff000079;
   padding: 15px;
-  width: 100%;
+  width: 98%;
   color: #1e58d6;
   text-shadow: 10px black;
-  font-size: 2em;
-  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.507);
+  
+}
+section {
+  font-family: var(--fontep);
   
 }
 section > p {
@@ -73,7 +77,6 @@ section > p {
   text-align: justify;
   text-indent: 2em;
   line-height: 1.3em;
-  padding: 15px;
 }
 
 footer {
@@ -92,7 +95,7 @@ h2#bosque {
   padding: 10px;
   display: block;
   margin: auto;
-  width: 300px;
+  height: 300px;
 }
 #fotoh1 {
   width: 200px;
