--- a/style.css
+++ b/style.css
@@ -74,6 +74,8 @@ section > p {
   text-indent: 2em;
   line-height: 1.3em;
   padding-bottom: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 footer {
